# similarium-rs

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md  build.rs  justfile  release-please-config.json  sqlx-data.json
.github/: dependabot.yml
.sqlx/: query-04c4dbca80e9fec94465d6608982e75d6150012c1a4686c5c449f160bec6864a.json  query-05a561e058fa3f1b2b98d99562721782ad44e64db60806ffa71e7529171d70ba.json  query-077b4adde5c940f9077c563a9840a610efcb8ea06a9956660d748af2478d8319.json  query-0b3f685eaef2ee1f3392c2283624ba2996fd2911fc435f528e9198d81736cbcc.json  query-0e6f708c25f3a75fbfac6df01b25ebddaabf78893543c9c6403ea1aa9490c3b3.json  query-169fcfa537d37ed33d6f77f6a8661c1d54cd00248d285105a73dc6bf27e38f20.json  query-235e4d4a1f6d5d29a62ee30e5dc0303b1eb7bb65ad50d7ab5874e986986f9771.json  query-2e25234cde1187977a3a1b5fcf9b5662b13e8b7fecdd8004df1baa2c6b1f49af.json  query-2e3a2ebccb19582e10d5224d18250965e638ec147d3936d961a974ad94b1d4ff.json  query-2ff03552b48594daaa2503c1293f41ef4889792dc3e671494399f1cf238a8be8.json  query-31578fa334087028c3f4c6836ee40ef53ab34bebe6570835cfecbdd2abd31fb6.json  query-349ed684c83d08af5dcc73888a6a1bd538399c312c46e571aa08d8b1cadfc4b9.json  query-485cb6d24720a003d28aa5d11db5e476c5566753b2b9b99d8955ea1d8c5c7523.json  query-49a8323948fe5c190e71b4e1352172afcfce1b7cd49e34b05ea48b0e7f3da8dc.json  query-5237341ff85ce8a3172112cab99ad15a1b14d01c067540d034b01a3ef0a448e6.json  query-56b91be9ad5ebea47b265372eb2483a8a93594ac0693ab86841afc0ee84740bc.json  query-5b062054b5cd0098191ea73f7e0bd90811268fdb73d62da07e6019a7fc3bc246.json  query-5c057aff9ce0517b53bb4250c54afb3a0312c843455b6a9eeecf45e821c3877c.json  query-5d8ffed5b217e906315d5770099b91f7aa8f24fd5c8874d6c46db295116c1a78.json  query-62989e216de0b811bc04e9eed1e813398411ea7d6cb8efcee574c09da4debb43.json  query-666268f0367a9ca5e40ca9f1d1a9fd5e86aba652067281e71c349a6533d5801d.json  query-7498c3f1648af3a4341af1c0c730f6b3cae9787953c2276e73a74a030d073ab7.json  query-76f1efef303105bd7ae542a43dd47b5edfbee14b1fac0764a0ae876f741a30f1.json  query-8aaaab51973d8b7c87ed2c68d12d8f53167119ca35a1a62d8628254b03395e70.json  query-8c54ebd81184e910967f31bcdc7fc0a4cb4a1362b83c77c72321e2c01e1a4467.json  query-8d1902760058b0b8875e99785b33a45c9b42a0845df684a4b9e34d82a6b327a6.json  query-94cc7e6a1ef4d5599c02b4a240e4696f3e8f9775c5d2beeae37dcbe96833ddde.json  query-9bd7d2b10db7bf89f1c13922d47e88f24511e38e5e0db265ac88bcaa6ccff4f7.json  query-a11882fbb26b42823234f13da23ec353ad0bca66e82b733273ddda4e7edc05f9.json  query-a3fc47e628b30b74f636bd91e28813ebcd54d443b519ffd8df1f6d7c7642f1df.json  query-a72bdb049471b1efec71d0c1bf8b307f2cdf8aeda2844cc30c1b1edc6532be6c.json  query-a8f450735aaafc5437b633d952bec65edc9b29c3e6b7404aa1cf204c2336ba32.json  query-ab3688d7dbf36b4bd939f1016e5d3ea9d4929b5649e0ea0090df1670360065d4.json  query-add624369f18da10df65b5dfaba21157cb96fa24d5874704b812eefb055203fb.json  query-b64c0e548d9ad2a166cd8fe2eebffb05143a932f8615f3ca670d0b55ad828a13.json  query-b697c0fde52ba0f8fe94dc77fe94e70bd586c21a0e82d18cf3ccc6885fd7c2aa.json  query-b87228ffae5250b7e4a0ec95f8ca3256b1c71e1bf50ce1b5821d322006b93ff1.json  query-ba6ae32b522bb066a3c74cc007ad43297ce9e067ebb809e6e3c69575981c08de.json  query-bf3acddf619d902d400b90f784f1160c8c98ca30af428bcbc4689c79814ae491.json  query-c2514c6ab47eeae0a093b1b2d32d542c6874fa94f80386353f1456887ccd0ffc.json  (+8 more)
docker/: Dockerfile  (+2 more)
(+98 files in other folders)
