[package]
name = "similarium"
description = "A slack bot to play Similarium together"
homepage = "https://similarium.dev"
authors = ["Axel <similarium@absalon.dev>"]
version = "0.2.1"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/ikornaselur/similarium-rs"

[dependencies]
actix-web = "4"
awc = { version = "3", features = ["rustls"] }
chrono = { version = "0.4.30", features = ["serde"] }
dotenvy = "0.15"
env_logger = "0.10"
log = "0.4"
mt19937 = "2.0"
num-format = "0.4.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7.1"
sha2 = "0.10"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
uuid = { version = "1.4", features = ["serde", "v4"] }
