[package]
name = "similarium"
description = "A slack bot to play Similarium together"
homepage = "https://similarium.dev"
authors = ["Axel <similarium@absalon.dev>"]
version = "0.6.4"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/ikornaselur/similarium-rs"

[dependencies]
actix-web = "4"
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15"
env_logger = "0.10"
fang = { version = "0.10.4", default-features=false, features = ["asynk", "derive-error"] }
log = "0.4"
num-format = "0.4.4"
openssl = { version = "0.10.57", features = ["vendored"] }
phf = { version = "0.11.2", features = ["macros"] }
rand = "0.8"
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7.1"
sha2 = "0.10"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
tokio = { version = "1.33.0", default-features = false, features = ["sync"] }
uuid = { version = "1.5", features = ["serde", "v4"] }

[profile.release]
lto = true
strip = true

[dev-dependencies]
mockall = "0.11.4"
mockito = "1.2.0"
